...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Products-->
        <scene sceneID="9z9-fO-aSG">
            <objects>
                <tableViewController title="Products" id="vVv-Yc-B8L" customClass="ProductsViewController" customModule="ShopBag" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsMultipleSelection="YES" rowHeight="80" sectionHeaderHeight="28" sectionFooterHeight="28" id="QAT-PZ-4cQ">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ProductIdentifier" rowHeight="80" id="Zk8-NM-RAS" userLabel="ProductCell" customClass="ProductTableViewCell" customModule="ShopBag" customModuleProvider="target">
...
                                            <rect key="frame" x="8" y="3" width="72" height="72"/>
                                            <constraints>
                                                <constraint firstAttribute="width" constant="72" id="Ash-1x-2fW"/>
                                                <constraint firstAttribute="height" constant="72" id="qzX-oC-K9k"/>
                                            </constraints>
                                        </imageView>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Peas" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gzc-Y1-8sd" userLabel="Name">
                                            <rect key="frame" x="88" y="8" width="100" height="34"/>
                                            <constraints>
                                                <constraint firstAttribute="height" constant="34" id="ZWb-xP-1Vo"/>
                                                <constraint firstAttribute="width" constant="100" id="mON-Vp-e9q"/>
                                            </constraints>
                                            <fontDescription key="fontDescription" type="system" pointSize="26"/>
...
                        <connections>
                            <outlet property="dataSource" destination="vVv-Yc-B8L" id="O9H-se-DrI"/>
                            <outlet property="delegate" destination="vVv-Yc-B8L" id="wsI-1R-D1U"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Products" id="Y0i-gK-Wim">
                        <barButtonItem key="rightBarButtonItem" image="ShoppingBagGray" width="32" id="bv3-wu-09F"/>
                    </navigationItem>
                    <connections>
                        <segue destination="K5w-XM-HxT" kind="show" identifier="CheckoutSegueIdentifier" id="M7s-9z-eAl"/>
                    </connections>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="rqv-xa-LSJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="590.625" y="58.75"/>
        </scene>
        <!--Checkout-->
        <scene sceneID="1vD-ca-b0S">
            <objects>
                <tableViewController title="Checkout" id="K5w-XM-HxT" customClass="CheckoutViewController" customModule="ShopBag" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="80" sectionHeaderHeight="28" sectionFooterHeight="28" id="Qi8-Ts-MEo">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <view key="tableHeaderView" contentMode="scaleToFill" id="vba-er-51y" userLabel="Header">
                            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
...
                                    <constraints>
                                        <constraint firstAttribute="height" constant="28" id="Rla-yD-hNS"/>
                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="189" id="kzK-Rz-H8n"/>
                                    </constraints>
                                    <segments>
                                        <segment title="USD"/>
                                        <segment title="EUR"/>
                                        <segment title="CHF"/>
                                        <segment title="GBP"/>
                                    </segments>
                                    <connections>
                                        <action selector="currencySelectedChangedAction:" destination="K5w-XM-HxT" eventType="valueChanged" id="AUQ-zs-yt8"/>
                                    </connections>
                                </segmentedControl>
                            </subviews>
...
